--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -15,8 +15,7 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    background-color: #F1F2F7; /* Example: light grey background */
+    margin-top: 0;
+    /*font-family: sans-serif;*/
 }
-
